<resources>
    <string name="app_name">RegistrationApp</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>

    
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="signup">Signup</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email">Email</string>

</resources>