<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/email_edt_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/email"/>


    <EditText
android:id="@+id/pass_edt_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"/>



    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/login"
        />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        />

    <TextView
        android:id="@+id/reset_pass_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/forgot_password" />
</LinearLayout>