<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

 <LinearLayout
     android:id="@+id/ll_activity_main"
     android:gravity="center"
    android:orientation="vertical"
     android:padding="25dp"
     android:background="#444444"
     android:layout_width="match_parent"
     android:layout_height="match_parent">

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="25dp"
         android:textColor="#6dffbf"
         android:padding="30dp"
         android:text="@string/login"/>

     <EditText
         android:id="@+id/email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"

         android:hint="@string/email"/>



     <EditText
         android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
        android:hint="@string/password"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/reset"
        />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/submit"
        />


</LinearLayout>


 </LinearLayout>
    <include layout="@layout/login_activity" android:visibility="gone"/>
    <include layout="@layout/login_activity" android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>